Add `source_id` to Authentications and Source has_many relationship
